ct-transpiler/testsuite/good/ImportEval/A.hs
{-# LANGUAGE ComposableTypes #-}

module A where

piececategory Expr

eval -: Expr -> Int
