ct-transpiler/testsuite/bad/OrderForLiftSum/OrderForLiftSum.hs
{-# LANGUAGE ComposableTypes #-}

module OrderForLiftSum where

piececategory A

eval -: Bool -> A -> Int
